syntax = "proto3";

option csharp_namespace = "gizem_server";

package gizem;

import "google/protobuf/any.proto";
service StreamGateway {
  rpc Forward(StreamGatewayQ) returns (StreamGatewayP);
}

message StreamGatewayQ {
  string id   = 1;
  google.protobuf.Any data  = 2;
}

message StreamGatewayP {
  bool success=1;
}



service Authentication {
    rpc Login (AuthenticationQ) returns (AuthenticationP);
}

message AuthenticationQ {
  string username = 1;
  string password = 2;
}

message AuthenticationP {
  string  token     = 1;
}

service WebRTCSignal {
  rpc SubscribeSession (SubscribeSessionQ) returns (stream SubscribeSessionP);
}


message SubscribeSessionQ {
  string session_id  = 1;
}

message SubscribeSessionP {
  repeated string peers     = 1;
}

service Notification {
  rpc Subscribe (NotificationQ) returns (stream NotificationP);
}

message NotificationQ {
}
message NotificationP {
   string name      = 1;
   string context   = 2;
   string detail    = 3;
}


service UserList {
  rpc SubscribeListUpdate (SubscribeListUpdateQ) returns (stream SubscribeListUpdateP);
  rpc Ring(RingQ) returns (stream RingP);
  rpc Answer(AnswerQ) returns (stream AnswerP);
}
message UserInfo {
    string userid  = 1;
    string username  = 2;
}

message SubscribeListUpdateQ {
  
}
message SubscribeListUpdateP {
    
  repeated UserInfo user  = 1;
}

message RingQ {
   string userid  = 2;
}
message RingP {
 enum Status {
    None = 0;
    Accepted = 1;
    Rejected = 2;
    Missed=3;
  }
  Status Response=1;
  string WebRTCSessionId=2;
}

message AnswerQ {
   string context=1;
}
message AnswerP {
 enum Status {
    None = 0;
    Connected=1;
    Missed=2;
  }
  Status Response=1;
  string WebRTCSessionId=2;

}

